--- a/BirdVoiceRecognizer/BirdVoiceRecognizer.csproj
+++ b/BirdVoiceRecognizer/BirdVoiceRecognizer.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.46.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.6.0" />
+    <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
